@@ -24,8 +24,13 @@
 
 #include <config.h>
 
+#include <sys/stat.h>
+
+#include <stdlib.h>
 #include <stdio.h>
 #include <stdarg.h>
+#include <dpkg/ehandle.h>
+#include <dpkg/varbuf.h>
 
 #include "debsig.h"
 
@@ -43,6 +48,40 @@ ds_printf(int level, const char *fmt, ...)
 	(void) vprintf(buf, ap);
 	va_end(ap);
     }
+}
+
+bool
+find_command(const char *prog)
+{
+    struct varbuf filename = VARBUF_INIT;
+    struct stat stab;
+    const char *path_list;
+    const char *path, *path_end;
+    size_t path_len;
+
+    path_list = getenv("PATH");
+    if (!path_list)
+      ohshit("PATH is not set");
+
+    for (path = path_list; path; path = *path_end ? path_end + 1 : NULL) {
+        path_end = strchrnul(path, ':');
+        path_len = (size_t)(path_end - path);
+
+        varbuf_reset(&filename);
+        varbuf_add_buf(&filename, path, path_len);
+        if (path_len)
+            varbuf_add_char(&filename, '/');
+        varbuf_add_str(&filename, prog);
+        varbuf_end_str(&filename);
+
+        if (stat(filename.buf, &stab) == 0 && (stab.st_mode & 0111)) {
+            varbuf_destroy(&filename);
+            return true;
+        }
+    }
+
+    varbuf_destroy(&filename);
+    return false;
 }
 
 off_t
